# genaryn_ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  nginx.conf  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_rename_metadata_column.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/middleware/: __init__.py  logging.py  timing.py
app/models/: __init__.py  conversation.py  decision.py  message.py  user.py
app/repositories/: __init__.py  conversation_repository.py  decision_repository.py  message_repository.py  user_repository.py
app/routers/: __init__.py  auth.py  chat.py  conversations.py  decisions.py  health.py  stream.py  websocket.py
app/schemas/: __init__.py  auth.py  conversation.py  decision.py  websocket.py
app/services/: auth_service.py  conversation_service.py  decision_service.py  llm_service.py  redis_service.py  websocket_manager.py
app/utils/: logger.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  LoadingScreen.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Decisions.tsx  Login.tsx
static-site/: index-docx-fixed.html  index-fixed.html  index.html
