[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"]  # Ignore line length
line-length = 100
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["app", "tests"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[project]
name = "genaryn-ai-deputy-commander"
version = "1.0.0"
description = "AI-powered decision support system for military operations"
requires-python = ">=3.11"